Fixed bug where first song in song list would be drawn to screen multiple times. Fixed bug in alternatestyle set 3.

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,14 +57,20 @@ Header Row
 }
 
 .header-row-background-alternate-1 {
-    background: rgba(153, 38, 0, 0.7);
-    background: linear-gradient(rgba(153, 38, 0, 0.7), rgba(153, 38, 0, 0.9)), url("images/leaf-motif.png") center no-repeat;
+    background: rgba(128, 21, 21);
+    background: linear-gradient(rgba(128, 21, 21, 0.7), rgba(128, 21, 21, 0.9)), url("images/leaf-motif.png") center no-repeat;
     background-size: cover;
 }
 
 .header-row-background-alternate-2 {
     background: rgba(153, 51, 102);
     background: linear-gradient(rgba(153, 51, 102, 0.7), rgba(153, 51, 102, 0.9)), url("images/leaf-motif.png") center no-repeat;
+    background-size: cover;
+}
+
+.header-row-background-alternate-3 {
+    background: rgba(21, 24, 60);
+    background: linear-gradient(rgba(21, 24, 60, 0.7), rgba(21, 24, 60, 0.9)), url("images/leaf-motif.png") center no-repeat;
     background-size: cover;
 }
 
@@ -100,11 +106,15 @@ Songs Row
 }
 
 .songs-row-background-alternate-1 {
-    background: #cc3300
+    background: #AA3939
 }
 
 .songs-row-background-alternate-2 {
     background: #ac3973
+}
+
+.songs-row-background-alternate-3 {
+    background: #2F335A
 }
 
 .song-wrapper {
@@ -120,11 +130,16 @@ Songs Row
 }
 
 .song-wrapper-background-alternate-1 {
-    background: #b32d00;
+    background: #550000;
 }
 
 .song-wrapper-background-alternate-2 {
     background: #73264d;
+    
+}
+
+.song-wrapper-background-alternate-3 {
+    background: #060922;
     
 }
 
