--- a/assets/style.css
+++ b/assets/style.css
@@ -75,6 +75,24 @@ Header Row
     background-size: cover;
 }
 
+.header-row-background-alternate-4 {
+    background: rgba(43, 17, 0);
+    background: linear-gradient(rgba(43, 17, 0, 0.4), rgba(43, 17, 0, 0.9)), url("images/leaf-motif.png") center no-repeat;
+    background-size: cover;
+}
+
+.header-row-background-alternate-5 {
+    background: rgba(25, 57, 6);
+    background: linear-gradient(rgba(25, 57, 6, 0.4), rgba(25, 57, 6, 0.9)), url("images/leaf-motif.png") center no-repeat;
+    background-size: cover;
+}
+
+.header-row-background-alternate-6 {
+    background: rgba(56, 52, 1);
+    background: linear-gradient(rgba(56, 52, 1, 0.4), rgba(56, 52, 1, 0.9)), url("images/leaf-motif.png") center no-repeat;
+    background-size: cover;
+}
+
 .main-title {
     font-size: 5em;
     margin-bottom: 5vh;
@@ -119,6 +137,18 @@ Songs Row
     background: #2F335A
 }
 
+.songs-row-background-alternate-4 {
+    background: #75370F
+}
+
+.songs-row-background-alternate-5 {
+    background: #446D2B
+}
+
+.songs-row-background-alternate-6 {
+    background: #7C7729
+}
+
 .song-wrapper {
     margin-top: 10px;
     color: #fff;
@@ -142,6 +172,21 @@ Songs Row
 
 .song-wrapper-background-alternate-3 {
     background: #060922;
+    
+}
+
+.song-wrapper-background-alternate-4 {
+    background: #4E1F00;
+    
+}
+
+.song-wrapper-background-alternate-5 {
+    background: #2E5617;
+    
+}
+
+.song-wrapper-background-alternate-6 {
+    background: #5B5611;
     
 }
 
